projects/campus-cloud/src/app/containers/controlpanel/contact-trace/cases/list/components/list-action-box/list-action-box.component.scss
@import '~projects/campus-cloud/src/sass/components/card';

.delete-provider {
  font-size: 2em;
}

.actions {
  @include card-margin();

  margin-top: 0;
}

cp-dropdown {
  width: 11em;
}

cp-menu {
  margin-left: -3px;

  cp-menu-item {
    span {
      width: 200px;
      padding: 12px;
      cursor: pointer;
    }
  }
}

